@@ -5,5 +5,12 @@ gem 'ruby-ldap'            # for LDAP integration
 gem 'daemons'              # for 'daemon-izing' the script
 gem 'slack-ruby-client'    # for Slack support
 
-# for Roles Management support
+gem 'eventmachine'         # required by slack-ruby-client
+gem 'faye-websocket'       # required by slack-ruby-client
+
+# For Roles Management support
 gem 'roles-management-api', git: "https://github.com/dssit/roles-management-api.git"
+
+# For GitHub support
+gem 'octokit'
+gem 'faraday-http-cache' # (provides etag caching in octokit)
